Restore swiper overflow clipping

--- a/index.html
+++ b/index.html
@@ -19,13 +19,8 @@
             --lime: #d2ff1e;
         }
 
-        .swiper {
-            overflow: visible !important;
-        }
-
-        /* Solo el wrapper deja salir los slides */
-        .swiper-wrapper {
-            overflow: visible !important;
+        .swiper-slide {
+            overflow: visible;
         }
 
         /* Efecto 3D controlado */
